Portal/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-ingress
  namespace: portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: api.portal.local
      http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-service
                port:
                  number: 8080
          - path: /api/identity(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-service
                port:
                  number: 8080
          - path: /api/candidates(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: candidate-service
                port:
                  number: 8081
          - path: /api/employers(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: employer-service
                port:
                  number: 8082
          - path: /api/jobs(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: job-service
                port:
                  number: 8083
